# abrasive

./: .gitignore  BUGS.md  IDEA.md  README.md  TODO.md  abrasive.toml  copy.bara.sky  mise.toml  netlify.toml
.github/workflows/: copybara.yml  deploy-daemon.yml
certs/: server.crt
cli/: Cargo.toml  README
cli/src/: auth.rs  errors.rs  main.rs  tls.rs
daemon/: Cargo.toml  README.md
daemon/deploy/: abrasived.service  config.toml
daemon/src/: SLOTS.md  auth.rs  constants.rs  errors.rs  main.rs  slots.rs
docs/: mdx-components.tsx  next.config.mjs  package.json  tailwind.config.cjs  theme.config.tsx  tsconfig.json
docs/pages/: 404.tsx  _app.tsx  _meta.js
docs/pages/concepts/: _meta.js  caching.mdx  index.mdx  remote-builds.mdx  workspaces.mdx
docs/pages/configuration/: _meta.js  environment-variables.mdx  index.mdx  toml-reference.mdx
docs/pages/getting-started/: _meta.js  auth.mdx  index.mdx  install.mdx  setup.mdx
docs/private/: bugs.md  idea.md
docs/styles/: global.css
drop-point/: Cargo.toml  INCREMENTAL.md  README.md  WORKSPACE_DETECTION.md
drop-point/src/: cache_io.rs  digest.rs  disk_cache.rs  lib.rs  main.rs  rustc_args.rs  rustc_args_parser_tests.rs  rustc_args_tests.rs
drop-point/src/rustc_args/: parser_tests.rs  tests.rs
drop-point/src/tests/: digest_tests.rs
drop-point/tests/: digest.rs  rustc_args_internals.rs  rustc_args_parser.rs  wrapper_chain.rs
protocol/: Cargo.toml
protocol/src/: errors.rs  lib.rs
wasteland/: WASTELAND.md  supabase-schema.sql
wasteland/web_app/src/: App.tsx  TopBar.tsx  router.ts  styles.css
wasteland/web_app/src/lib/: tokens.ts
wasteland/web_app/src/pages/: SignIn.tsx  Tokens.tsx
wasteland/website/: package.json
wasteland/website/public/: get
wasteland/website/src/components/: TopBar.astro
wasteland/website/src/layouts/: Base.astro
wasteland/website/src/pages/: demo.astro  demo.mdx  get_abrasive.astro  getting-started.astro  getting-started.mdx  index.astro
