[package]
name = "abrasive-cli"
version = "0.0.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive", "color", "help"] }
thiserror = "2.0.18"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
bincode = "1"
log = "0.4"
