[package]
name = "abrasive-daemon"
version = "0.0.0"
edition = "2024"

[dependencies]
abrasive-protocol = { path = "../protocol" }
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
rustls-pemfile = "2"
blake3 = "1"
walkdir = "2"
rayon = "1"
tungstenite = "0.23"
ureq = { version = "2", default-features = false, features = ["tls", "json"] }
serde_json = "1"
thiserror = "2"
