[package]
name = "drop-point"
version = "0.0.1"
edition = "2024"
description = "Remote cargo build-output cache. Placeholder, not functional yet."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Clavigers/abrasive"

[dependencies]
log = "0.4"
env_logger = "0.11"
thiserror = "2"
blake3 = "1"
tempfile = "3"
zip = { version = "0.6", default-features = false }
zstd = "0.13"
